# sim

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  measures.csv  mis.c  mis.h  pm.c  read_file.c  test.c  transfer.sh  viz.R
presentation/: presentation.tex
rapport/: rapport.aux  rapport.tex  rapport.toc
sim10/: MIS_BG.err
sim11/: MIS_BG.err  output.csv
sim12/: job.sh  output.csv
sim13/: output.csv
sim14/: output.csv
sim16/: MIS_BG.err  job.sh
sim17/: MIS_BG.err  job.sh
sim2/: MIS_BG.699479.err  output.csv
sim4/: job.sh  output.csv
sim5/: output.csv
sim6/: MIS_BG.699489.err  job.sh  output.csv
sim7/: MIS_BG.err  job.sh
sim8/: output.csv
sim9/: MIS_BG.err  job.sh  master
simulation_poincare/: resultats.csv
simulation_poincare/bcsstm12_16_1_50_5_10/: job.sh
simulation_poincare/bcsstm12_1_1_50_5_10_16threads/: MIS_BG.err  job.sh
simulation_poincare/bcsstm12_4_4_50_5_10_16threads/: job.sh
simulation_poincare/gemat12_16_1_50_5_10_16threads/: output.csv
simulation_poincare/gemat12_1_1_50_5_10_16threads/: MIS_BG.err
simulation_poincare/gemat12_1_1_50_5_10_16threads_ter/: MIS_BG.err
simulation_poincare/gemat12_4_1_50_5_10_16threads/: job.sh
simulation_poincare/sim10/: output.csv
simulation_poincare/sim11/: job.sh
simulation_poincare/sim13/: MIS_BG.err
simulation_poincare/sim14/: job.sh
simulation_poincare/sim17/: output.csv
simulation_poincare/sim4/: MIS_BG.699483.err
simulation_poincare/sim5/: MIS_BG.699484.err  job.sh
simulation_poincare/sim7/: output.csv
simulation_poincare/sim9/: output.csv
src/: bench.c  mis.c  mis.h  pm.c  read_file.c  read_file.h
test/: compute_eve.py  test.c
test/matrices/: .bcspwr01.mtx.swp  .bcspwr02.mtx.swp  .can_1054.mtx.swp  .can_187.rb.swp  3x3  bcspwr01.eve  bcspwr02.eve  bcspwr03.eve  can_187.rb  simple3x3
